[gd_scene load_steps=2 format=3 uid="uid://bqh8x8m8x8x8x"]

[ext_resource type="Script" path="res://scripts/ui/OfflineProgressUI.gd" id="1_xxxxx"]

[node name="OfflineProgressUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xxxxx")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "离线收益"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "离线时间: "
horizontal_alignment = 1

[node name="ProgressLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "获得收益: "
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "确认"
